[gd_scene load_steps=10 format=3 uid="uid://bp8ctl0m7sac2"]

[ext_resource type="Script" path="res://scripts/enemy/enemy_template.gd" id="1_jboe5"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_texture.gd" id="2_34b2k"]
[ext_resource type="PackedScene" uid="uid://whwmbtul3wy8" path="res://scenes/env/floating_text.tscn" id="2_f4jtq"]
[ext_resource type="Script" path="res://scripts/enemy/detection_area.gd" id="3_818xf"]
[ext_resource type="Script" path="res://scripts/enemy/collision_area.gd" id="4_10jr7"]
[ext_resource type="Script" path="res://scripts/enemy_attack_area.gd" id="5_is0nr"]
[ext_resource type="Texture2D" uid="uid://bl7mcygksoq41" path="res://assets/enemy/general/enemy_health_bar_background.png" id="7_nuw56"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_bar.gd" id="7_pg8cd"]
[ext_resource type="Texture2D" uid="uid://ce0eryiinkw4s" path="res://assets/enemy/general/health_bar.png" id="8_uckfa"]

[node name="EnemyTemplate" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_jboe5")
speed = 50
gravity_speed = -300
proximity_threshold = 15
ray_cast_default_position = -33
floating_text = ExtResource("2_f4jtq")

[node name="Texture" type="Sprite2D" parent="."]
script = ExtResource("2_34b2k")
animation_path = NodePath("../Animation")
enemy_path = NodePath("..")
attack_area_collision_path = NodePath("../EnemyAttackArea/Collision")

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_818xf")
enemy_path = NodePath("..")

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_10jr7")
enemy_bar_path = NodePath("../enemy_bar")
enemy_path = NodePath("..")

[node name="Collision" type="CollisionShape2D" parent="CollisionArea"]

[node name="Timer" type="Timer" parent="CollisionArea"]

[node name="EnemyAttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("5_is0nr")
damage = 3

[node name="Collision" type="CollisionShape2D" parent="EnemyAttackArea"]

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionArea")

[node name="FloorRay" type="RayCast2D" parent="."]
position = Vector2(0, -33)
target_position = Vector2(0, 30)

[node name="enemy_bar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -22.0
offset_right = -32.0
offset_bottom = -22.0
script = ExtResource("7_pg8cd")

[node name="bar_background" type="TextureRect" parent="enemy_bar"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 17.0
texture = ExtResource("7_nuw56")

[node name="health_bar" type="TextureProgressBar" parent="enemy_bar/bar_background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -1.5
offset_right = 28.0
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture_progress = ExtResource("8_uckfa")

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
[connection signal="area_entered" from="CollisionArea" to="CollisionArea" method="on_collision_area_entered"]
[connection signal="area_entered" from="CollisionArea" to="CollisionArea" method="_on_area_entered"]
[connection signal="timeout" from="CollisionArea/Timer" to="CollisionArea" method="_on_timer_timeout"]
[connection signal="animation_finished" from="Animation" to="Texture" method="_on_animation_finished"]
